@@ -10,12 +10,4 @@
 /******************************************************************************/
 #pragma once
 
-#include "AEnum.hpp"
-
-#define ENUM_NEIGH ENeigh, UNIQUE, \
-                   UNIQUE, 0, "Unique Neighborhood", \
-                   BENCH,  1, "Bench Neighborhood", \
-                   MOVING, 2, "Moving Neighborhood", \
-                   IMAGE,  3, "Image Neighborhood"
-
-ENUM_DECLARE(ENUM_NEIGH)
+#include "ENeigh.hpp"
