@@ -8,14 +8,6 @@
 /*                                                                            */
 /* TAG_SOURCE_CG                                                              */
 /******************************************************************************/
-#pragma once
+#include "Enum/Enums.hpp"
 
-#include "AEnum.hpp"
-
-#define ENUM_NEIGH ENeigh, UNIQUE, \
-                   UNIQUE, 0, "Unique Neighborhood", \
-                   BENCH,  1, "Bench Neighborhood", \
-                   MOVING, 2, "Moving Neighborhood", \
-                   IMAGE,  3, "Image Neighborhood"
-
-ENUM_DECLARE(ENUM_NEIGH)
+ENUM_DEFINE(ENUM_NEIGH)
