@@ -13,15 +13,6 @@
 #include "Basic/AException.hpp"
 #include "geoslib_f.h"
 
-#include "Enum/ENeigh.hpp"
-
-// Sync with ENeigh.hpp
-ENUM_DEFINE(ENeigh, UNIQUE,
-            UNIQUE, 0, "Unique Neighborhood",
-            BENCH,  1, "Bench Neighborhood",
-            MOVING, 2, "Moving Neighborhood",
-            IMAGE,  3, "Image Neighborhood")
-
 Neigh::Neigh()
     : AStringable(),
       ASerializable(),
