@@ -6,13 +6,15 @@ Release 0.0.2
 
 New functions :
 ---------------
+- New ENUM Macros + refactoring
 
 Modification in functions :
 ---------------------------
 
 Bug Fixes :
 -----------
--Bug fixed in OptimBinaryCost.
+-Bug fixed in OptimBinaryCost
+
 
 Release 0.0.1
 ==============
